# solana-token-sale-program

./: .gitignore  README.md
client/: .example-env  package.json  tsconfig.json
client/src/: account.ts  addToPool.ts  buyToken.ts  closeTokenSale.ts  setup.ts  startTokenSale.ts  utils.ts
program/: Anchor.toml  Cargo.toml
program/src/: instruction.rs  processor.rs
