[package]
name = "spl-tokensale-solana"
version = "0.1.0"
edition = "2018"
license = "WTFPL"
publish = false

[features]
no-entrypoint = []

[dependencies]
solana-program = "2.0.2"
thiserror = "1.0.24"
spl-token-2022 = { version = "4.0.0", features = ["no-entrypoint"]}
arrayref = "0.3.6"
solana-frozen-abi = "2.0.2"
zeroize = "=1.3.0"
getrandom = { version = "0.1.14", features = ["dummy"] }
borsh = "1.5.1"
spl-associated-token-account = { version="=1.0.5", features = [ "no-entrypoint" ] }

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
overflow-checks = true

[profile.dev]
overflow-checks = true